# captcha-recognize-bundle

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-Docker.md  README.md  docker-build.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: README.md  cd.yml  ci.yml  docker-hub.yml
src/api/: __init__.py  admin.py  app.py  auth.py  predict.py
src/db/: __init__.py  models.py
src/ml/: __init__.py  captcha_model.py
src/services/: __init__.py  apikey_service.py  auth_service.py
src/utils/: __init__.py  jwt_utils.py
